test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-unmanaged.good
init-field-dflt-nonnil-borrowed-from-oknil-unmanaged.chpl:8: error: Cannot initialize lhs of non-nilable type 'borrowed MyClass' from a nilable 'unmanaged MyClass?'
init-field-dflt-nonnil-borrowed-from-oknil-unmanaged.chpl:13: error: done
